pxc/tests/test_01_px/up7.px

namespace up7;
import common -;

function {t, f} void values_vector(vector{t} mutable& v)
{
  uint sz = v.size();
  uint i;
  for (i = 0; i < sz; ++i) {
    f(v[i]);
  }
}

function {t, f} void keys_vector(vector{t} mutable& v)
{
  uint sz = v.size();
  uint i;
  for (i = 0; i < sz; ++i) {
    f(i);
  }
}

function void foo(vector{int} mutable& v) {
  int x;
  function {t} void add(t y) { x += y; }
  // metafunction m1 function void(int y) { x += y; };
  metafunction m1{t} add{t};
  values_vector{int, m1{t}}(v); // error
  println(x);
}

vector{int} a;
a.resize(101);
int i;
for (i = 0; i < a.size(); ++i) {
  a[i] = i;
}
foo(a);

